--- a/org.sqlproc.meta.parent/pom.xml
+++ b/org.sqlproc.meta.parent/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.sqlproc.meta</groupId>
-	<version>2.6.0-SNAPSHOT</version>
+	<version>2.6.0</version>
 	<artifactId>org.sqlproc.meta.parent</artifactId>
 	<packaging>pom</packaging>
 
