--- a/org.sqlproc.meta.parent/build.gradle
+++ b/org.sqlproc.meta.parent/build.gradle
@@ -25,7 +25,7 @@ subprojects {
 	apply plugin: 'idea'
 	
 	group = 'org.sqlproc.meta'
-	version = '2.6.0'
+	version = '2.7.0-SNAPSHOT'
 	
 	sourceCompatibility = '1.7'
 	targetCompatibility = '1.7'
