--- a/org.sqlproc.model.parent/org.sqlproc.model/pom.xml
+++ b/org.sqlproc.model.parent/org.sqlproc.model/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.sqlproc.model</groupId>
 		<artifactId>org.sqlproc.model.parent</artifactId>
-		<version>2.6.1</version>
+		<version>2.7.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.sqlproc.model</artifactId>
 	<packaging>eclipse-plugin</packaging>
