--- a/org.sqlproc.model.parent/org.sqlproc.model.web/pom.xml
+++ b/org.sqlproc.model.parent/org.sqlproc.model.web/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.sqlproc.model</groupId>
 		<artifactId>org.sqlproc.model.parent</artifactId>
-		<version>2.7.0</version>
+		<version>2.7.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.sqlproc.model.web</artifactId>
 	<packaging>war</packaging>
