--- a/org.sqlproc.model.parent/org.sqlproc.model.target/pom.xml
+++ b/org.sqlproc.model.parent/org.sqlproc.model.target/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.sqlproc.model</groupId>
 		<artifactId>org.sqlproc.model.parent</artifactId>
-		<version>2.7.1</version>
+		<version>2.7.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.sqlproc.model.target</artifactId>
 	<packaging>eclipse-target-definition</packaging>
