--- a/ooo/pom.xml
+++ b/ooo/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.sqlproc</groupId>
     <artifactId>mote-model</artifactId>
-    <version>2.7.3</version>
+    <version>3.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Common parent for SQLMEP and SQLMOP</name>
 
