--- a/org.sqlproc.meta.parent/org.sqlproc.meta.tests/pom.xml
+++ b/org.sqlproc.meta.parent/org.sqlproc.meta.tests/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.sqlproc.meta</groupId>
 		<artifactId>org.sqlproc.meta.parent</artifactId>
-		<version>2.7.3</version>
+		<version>3.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.sqlproc.meta.tests</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
