--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,13 @@
-target
-build
-!.classpath
-!.project
-!.settings
+.*
+!/.gitignore
+!/.gitkeep
+bin/
+target/
+build/
+.gradle/
+generated/
+generated-sources/
+src-gen/
+xtend-gen/
 .DS_Store
-*.iml
-*.ipr
-*.iws
-*.log
-.springBeans
-.pydevproject
-*.swp
-*.xtendbin
-*._trace
-bin
-buildroot
-*~
+*.xml_gen
