--- a/org.sqlproc.meta.parent/pom.xml
+++ b/org.sqlproc.meta.parent/pom.xml
@@ -8,7 +8,7 @@
 
 	<properties>
 		<tycho-version>1.4.0</tycho-version>
-		<xtextVersion>2.18.0</xtextVersion>
+		<xtext-version>2.18.0</xtext-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
@@ -45,7 +45,7 @@
 					<plugin>
 						<groupId>org.eclipse.xtend</groupId>
 						<artifactId>xtend-maven-plugin</artifactId>
-						<version>${xtextVersion}</version>
+						<version>${xtext-version}</version>
 						<executions>
 							<execution>
 								<goals>
