--- a/org.sqlproc.meta.parent/org.sqlproc.meta/pom.xml
+++ b/org.sqlproc.meta.parent/org.sqlproc.meta/pom.xml
@@ -46,17 +46,17 @@
 						<dependency>
 							<groupId>org.eclipse.xtext</groupId>
 							<artifactId>org.eclipse.xtext.common.types</artifactId>
-							<version>${xtext.version}</version>
+							<version>${xtext-version}</version>
 						</dependency>
 						<dependency>
 							<groupId>org.eclipse.xtext</groupId>
 							<artifactId>org.eclipse.xtext.xtext.generator</artifactId>
-							<version>${xtext.version}</version>
+							<version>${xtext-version}</version>
 						</dependency>
 						<dependency>
 							<groupId>org.eclipse.xtext</groupId>
 							<artifactId>org.eclipse.xtext.xbase</artifactId>
-							<version>${xtext.version}</version>
+							<version>${xtext-version}</version>
 						</dependency>
 						<dependency>
 							<groupId>org.eclipse.xtext</groupId>
