--- a/org.sqlproc.meta.parent/pom.xml
+++ b/org.sqlproc.meta.parent/pom.xml
@@ -17,12 +17,12 @@
 
 	<modules>
 		<module>org.sqlproc.meta</module>
-		<module>org.sqlproc.meta.ide</module>
+		<!--module>org.sqlproc.meta.ide</module>
 		<module>org.sqlproc.meta.ui</module>
 		<module>org.sqlproc.meta.tests</module>
 		<module>org.sqlproc.meta.ui.tests</module>
 		<module>org.sqlproc.meta.sdk</module>
-		<module>org.sqlproc.meta.updatesite</module>
+		<module>org.sqlproc.meta.updatesite</module-->
 	</modules>
 
 		<repositories>
@@ -34,7 +34,7 @@
 			<repository>
 				<id>Xtext Update Site</id>
 				<layout>p2</layout>
-				<url>https://download.eclipse.org/modeling/tmf/xtext/updates/releases/${xtext.version}/</url>
+				<url>https://download.eclipse.org/modeling/tmf/xtext/updates/releases/${xtext-version}/</url>
 			</repository>
 		</repositories>
 
