--- a/org.sqlproc.model.parent/pom.xml
+++ b/org.sqlproc.model.parent/pom.xml
@@ -34,7 +34,7 @@
 		<repository>
 			<id>Xtext Update Site</id>
 			<layout>p2</layout>
-			<url>https://download.eclipse.org/modeling/tmf/xtext/updates/releases/${xtext.version}/</url>
+			<url>https://download.eclipse.org/modeling/tmf/xtext/updates/releases/${xtext-version}/</url>
 		</repository>
 	</repositories>
 
