--- a/org.sqlproc.meta.parent/pom.xml
+++ b/org.sqlproc.meta.parent/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.sqlproc.meta</groupId>
 	<version>3.0.0-SNAPSHOT</version>
-	<artifactId>parent</artifactId>
+	<artifactId>org.sqlproc.meta.parent</artifactId>
 	<packaging>pom</packaging>
 
 	<properties>
