--- a/org.sqlproc.model.parent/org.sqlproc.model/pom.xml
+++ b/org.sqlproc.model.parent/org.sqlproc.model/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.sqlproc.model</groupId>
-		<artifactId>parent</artifactId>
+		<artifactId>org.sqlproc.model.parent</artifactId>
 		<version>3.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.sqlproc.model</artifactId>
