--- a/org.sqlproc.model.parent/pom.xml
+++ b/org.sqlproc.model.parent/pom.xml
@@ -17,8 +17,8 @@
 
 	<modules>
 		<module>org.sqlproc.model</module>
-		<!--module>org.sqlproc.model.ide</module>
-		<module>org.sqlproc.model.ui</module>
+		<module>org.sqlproc.model.ide</module>
+		<!--module>org.sqlproc.model.ui</module>
 		<module>org.sqlproc.model.tests</module>
 		<module>org.sqlproc.model.ui.tests</module>
 		<module>org.sqlproc.model.sdk</module>
