--- a/org.sqlproc.model.parent/org.sqlproc.model.ui/pom.xml
+++ b/org.sqlproc.model.parent/org.sqlproc.model.ui/pom.xml
@@ -12,10 +12,20 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-clean-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>gen-clean</id>
+						<phase>clean</phase>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.eclipse.xtend</groupId>
 				<artifactId>xtend-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-	</build>
+  </build>
 
 </project>
