--- a/org.sqlproc.model.parent/pom.xml
+++ b/org.sqlproc.model.parent/pom.xml
@@ -20,7 +20,7 @@
 		<module>org.sqlproc.model.ide</module>
 		<module>org.sqlproc.model.ui</module>
 		<module>org.sqlproc.model.tests</module>
-		<!--module>org.sqlproc.model.ui.tests</module-->
+		<module>org.sqlproc.model.ui.tests</module>
 		<module>org.sqlproc.model.sdk</module>
 		<module>org.sqlproc.model.updatesite</module>
 	</modules>
