--- a/org.sqlproc.meta.parent/pom.xml
+++ b/org.sqlproc.meta.parent/pom.xml
@@ -17,12 +17,12 @@
 
 	<modules>
 		<module>org.sqlproc.meta</module>
-		<!--module>org.sqlproc.meta.ide</module>
+		<module>org.sqlproc.meta.ide</module>
 		<module>org.sqlproc.meta.ui</module>
 		<module>org.sqlproc.meta.tests</module>
 		<module>org.sqlproc.meta.ui.tests</module>
 		<module>org.sqlproc.meta.sdk</module>
-		<module>org.sqlproc.meta.updatesite</module-->
+		<module>org.sqlproc.meta.updatesite</module>
 	</modules>
 
 	<repositories>
