--- a/org.sqlproc.model.parent/org.sqlproc.model.tests/pom.xml
+++ b/org.sqlproc.model.parent/org.sqlproc.model.tests/pom.xml
@@ -12,16 +12,6 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-clean-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>gen-clean</id>
-						<phase>clean</phase>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
 				<groupId>org.eclipse.xtend</groupId>
 				<artifactId>xtend-maven-plugin</artifactId>
 			</plugin>
@@ -30,8 +20,7 @@
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<version>${tycho-version}</version>
 				<configuration>
-					<useUIHarness>false</useUIHarness>
-					<useUIThread>false</useUIThread>
+					<failIfNoTests>false</failIfNoTests>
 				</configuration>
 			</plugin>
 		</plugins>
