--- a/org.sqlproc.meta.parent/org.sqlproc.meta/build.properties
+++ b/org.sqlproc.meta.parent/org.sqlproc.meta/build.properties
@@ -16,5 +16,6 @@ additional.bundles = org.eclipse.xtext.xbase,\
                      org.eclipse.emf.mwe2.lib,\
                      org.objectweb.asm,\
                      org.apache.commons.logging,\
+                     org.apache.commons.cli, \
                      org.apache.log4j,\
                      com.ibm.icu
