--- a/org.sqlproc.model.parent/org.sqlproc.model/pom.xml
+++ b/org.sqlproc.model.parent/org.sqlproc.model/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.sqlproc.model</groupId>
 		<artifactId>org.sqlproc.model.parent</artifactId>
-		<version>3.0.1</version>
+		<version>3.1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.sqlproc.model</artifactId>
 	<packaging>eclipse-plugin</packaging>
@@ -15,7 +15,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.6.0</version>
+				<version>3.0.0</version>
 				<executions>
 					<execution>
 						<id>mwe2Launcher</id>
@@ -40,7 +40,7 @@
 					<dependency>
 						<groupId>org.eclipse.emf</groupId>
 						<artifactId>org.eclipse.emf.mwe2.launch</artifactId>
-						<version>2.11.2</version>
+						<version>2.12.0</version>
 					</dependency>
 					<dependency>
 						<groupId>org.eclipse.xtext</groupId>
