--- a/org.sqlproc.meta.parent/org.sqlproc.meta.ui/pom.xml
+++ b/org.sqlproc.meta.parent/org.sqlproc.meta.ui/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.sqlproc.meta</groupId>
 		<artifactId>org.sqlproc.meta.parent</artifactId>
-		<version>3.1.0-SNAPSHOT</version>
+		<version>3.1.0</version>
 	</parent>
 	<artifactId>org.sqlproc.meta.ui</artifactId>
 	<packaging>eclipse-plugin</packaging>
