--- a/org.sqlproc.meta.parent/pom.xml
+++ b/org.sqlproc.meta.parent/pom.xml
@@ -2,13 +2,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.sqlproc.meta</groupId>
-	<version>3.1.0</version>
+	<version>3.2.0-SNAPSHOT</version>
 	<artifactId>org.sqlproc.meta.parent</artifactId>
 	<packaging>pom</packaging>
 
 	<properties>
-		<tycho-version>1.6.0</tycho-version>
-		<xtext-version>2.24.0</xtext-version>
+		<tycho-version>4.0.7</tycho-version>
+		<xtext-version>2.34.0</xtext-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<tycho.disableP2Mirrors>true</tycho.disableP2Mirrors>
 	</properties>
@@ -27,7 +27,7 @@
 		<repository>
 			<id>eclipse</id>
 			<layout>p2</layout>
-			<url>https://download.eclipse.org/releases/2020-09/</url>
+			<url>https://download.eclipse.org/releases/2024-06/</url>
 		</repository>
 		<repository>
 			<id>Xtext Update Site</id>
