--- a/org.sqlproc.model.parent/org.sqlproc.model.updatesite/pom.xml
+++ b/org.sqlproc.model.parent/org.sqlproc.model.updatesite/pom.xml
@@ -4,7 +4,7 @@
   <parent>
 		<groupId>org.sqlproc.model</groupId>
 		<artifactId>org.sqlproc.model.parent</artifactId>
-		<version>3.1.0</version>
+		<version>3.2.0-SNAPSHOT</version>
 	</parent>
   <artifactId>org.sqlproc.model.updatesite</artifactId>
   <packaging>eclipse-repository</packaging>
