--- a/org.sqlproc.meta.parent/org.sqlproc.meta.tests/pom.xml
+++ b/org.sqlproc.meta.parent/org.sqlproc.meta.tests/pom.xml
@@ -12,6 +12,16 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-clean-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>gen-clean</id>
+						<phase>clean</phase>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.eclipse.xtend</groupId>
 				<artifactId>xtend-maven-plugin</artifactId>
 			</plugin>
@@ -21,6 +31,8 @@
 				<version>${tycho-version}</version>
 				<configuration>
 					<failIfNoTests>false</failIfNoTests>
+					<useUIHarness>false</useUIHarness>
+					<useUIThread>false</useUIThread>
 				</configuration>
 			</plugin>
 		</plugins>
