--- a/org.sqlproc.meta.parent/org.sqlproc.meta.ui.tests/pom.xml
+++ b/org.sqlproc.meta.parent/org.sqlproc.meta.ui.tests/pom.xml
@@ -30,6 +30,7 @@
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<version>${tycho-version}</version>
 				<configuration>
+					<failIfNoTests>false</failIfNoTests>
 					<useUIHarness>false</useUIHarness>
 					<useUIThread>false</useUIThread>
 				</configuration>
