--- a/org.sqlproc.meta.parent/org.sqlproc.meta/pom.xml
+++ b/org.sqlproc.meta.parent/org.sqlproc.meta/pom.xml
@@ -112,6 +112,21 @@
 				</configuration>
 			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.3.0</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+							<mainClass>org.sqlproc.meta.generator.Main</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+
 		</plugins>
 
 		<pluginManagement>
