--- a/org.sqlproc.meta.parent/org.sqlproc.meta/pom.xml
+++ b/org.sqlproc.meta.parent/org.sqlproc.meta/pom.xml
@@ -58,9 +58,9 @@
 						<version>${xtext-version}</version>
 					</dependency>
 					<dependency>
-						<groupId>org.eclipse.xtext</groupId>
-						<artifactId>xtext-antlr-generator</artifactId>
-						<version>[2.1.1, 3)</version>
+  						<groupId>org.eclipse.xtext</groupId>
+  						<artifactId>org.eclipse.xtext.xtext.generator.dependencies</artifactId>
+  						<version>${xtext-version}</version>
 					</dependency>
 				</dependencies>
 			</plugin>
