--- a/org.sqlproc.model.parent/pom.xml
+++ b/org.sqlproc.model.parent/pom.xml
@@ -7,8 +7,10 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<tycho-version>4.0.13</tycho-version>
-		<xtext-version>2.40.0</xtext-version>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
+		<tycho-version>5.0.1</tycho-version>
+		<xtext-version>2.41.0</xtext-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<tycho.disableP2Mirrors>true</tycho.disableP2Mirrors>
 	</properties>
@@ -25,9 +27,13 @@
 
 	<repositories>
 		<repository>
+			<id>xtext-maven</id>
+			<url>https://download.eclipse.org/modeling/tmf/xtext/maven/</url>
+		</repository>
+		<repository>
 			<id>eclipse</id>
 			<layout>p2</layout>
-			<url>https://download.eclipse.org/releases/2025-06/</url>
+			<url>https://download.eclipse.org/releases/2025-12/</url>
 		</repository>
 		<repository>
 			<id>Xtext Update Site</id>
