--- a/org.sqlproc.meta.parent/org.sqlproc.meta/pom.xml
+++ b/org.sqlproc.meta.parent/org.sqlproc.meta/pom.xml
@@ -35,6 +35,7 @@
 					<classpathScope>compile</classpathScope>
 					<includePluginDependencies>true</includePluginDependencies>
 					<cleanupDaemonThreads>false</cleanupDaemonThreads><!-- see https://bugs.eclipse.org/bugs/show_bug.cgi?id=475098#c3 -->
+					<fork>true</fork>
 				</configuration>
 				<dependencies>
 					<dependency>
